--- a/RuleSet/机场Emby.yaml
+++ b/RuleSet/机场Emby.yaml
@@ -1,6 +1,7 @@
 payload:
 #守候
 #ACA
+  - DOMAIN-KEYWORD,misakaf
   - DOMAIN-SUFFIX,emby.aca.best
   - DOMAIN-SUFFIX,porn.aca.best
   - DOMAIN-SUFFIX,emby.cn2gias.uk
