--- a/Done/XTT@MESL@CTC.yaml
+++ b/Done/XTT@MESL@CTC.yaml
@@ -1,27 +1,24 @@
-mixed-port: 7890
-allow-lan: true
-mode: rule
+mode: Rule
 log-level: info
-ipv6: false
-#dns: #DNS 设置一般无需打开，如果你坚持想用，请确保你知道在做什么
-  #enable: true
-  #listen: 0.0.0.0:53
-  #ipv6: false
-  #default-nameserver:
-    #- 223.5.5.5
-    #- 119.29.29.29
-  #enhanced-mode: redir-host
-  #nameserver:
-    #- https://doh.pub/dns-query
-    #- https://dns.alidns.com/dns-query
-  #fallback:
-    #- https://1.1.1.1/dns-query
-    #- https://dns.google/dns-query
-  #fallback-filter:
-    #geoip: true
-    #geoip-code: CN
-    #ipcidr:
-      #- 240.0.0.0/4
+external-controller: ':9090'
+dns:
+    enable: true
+    listen: '0.0.0.0:1053'
+    enhanced-mode: fake-ip
+    nameserver: [119.29.29.29, 223.5.5.5]
+    fallback: ['https://120112.alidns.com/dns-query', 1.1.1.1]
+    fallback-filter: { geoip: true, geoip-code: CN }
+    fake-ip-filter: [dns.msftncsi.com, www.msftncsi.com, www.msftconnecttest.com, '+.stun.*.*', '+.stun.*.*.*', '+.stun.*.*.*.*', '+.stun.*.*.*.*.*', '*.n.n.srv.nintendo.net', +.stun.playstation.net, 'xbox.*.*.microsoft.com', '*.*.xboxlive.com', '*.msftncsi.com', '*.msftconnecttest.com', '*.lan', '*.localdomain', '*.example', '*.invalid', '*.localhost', '*.test', '*.local', '*.home.arpa', 'time.*.com', 'time.*.gov', 'time.*.edu.cn', 'time.*.apple.com', time-ios.apple.com, 'time1.*.com', 'time2.*.com', 'time3.*.com', 'time4.*.com', 'time5.*.com', 'time6.*.com', 'time7.*.com', 'ntp.*.com', 'ntp1.*.com', 'ntp2.*.com', 'ntp3.*.com', 'ntp4.*.com', 'ntp5.*.com', 'ntp6.*.com', 'ntp7.*.com', '*.time.edu.cn', '*.ntp.org.cn', +.pool.ntp.org, time1.cloud.tencent.com, music.163.com, '*.music.163.com', '*.126.net', musicapi.taihe.com, music.taihe.com, songsearch.kugou.com, trackercdn.kugou.com, '*.kuwo.cn', api-jooxtt.sanook.com, api.joox.com, joox.com, y.qq.com, '*.y.qq.com', streamoc.music.tc.qq.com, mobileoc.music.tc.qq.com, isure.stream.qqmusic.qq.com, dl.stream.qqmusic.qq.com, aqqmusic.tc.qq.com, amobile.music.tc.qq.com, '*.xiami.com', '*.music.migu.cn', music.migu.cn, +.msftconnecttest.com, +.msftncsi.com, localhost.ptlogin2.qq.com, localhost.sec.qq.com, +.qq.com, +.tencent.com, +.srv.nintendo.net, '*.n.n.srv.nintendo.net', +.stun.playstation.net, 'xbox.*.*.microsoft.com', '*.*.xboxlive.com', 'xbox.*.microsoft.com', xnotify.xboxlive.com, +.battlenet.com.cn, +.wotgame.cn, +.wggames.cn, +.wowsgame.cn, +.wargaming.net, proxy.golang.org, heartbeat.belkin.com, '*.linksys.com', '*.linksyssmartwifi.com', '*.router.asus.com', mesu.apple.com, swscan.apple.com, swquery.apple.com, swdownload.apple.com, swcdn.apple.com, swdist.apple.com, lens.l.google.com, stun.l.google.com, +.nflxvideo.net, '*.square-enix.com', '*.finalfantasyxiv.com', '*.ffxiv.com', '*.ff14.sdo.com', ff.dorado.sdo.com, '*.mcdn.bilivideo.cn', +.media.dssott.com, shark007.net, +.cmbchina.com, +.cmbimg.com, local.adguard.org, +.sandai.net, +.n0808.com]
+tun:
+    enable: false
+    stack: gvisor
+    auto-route: true
+    auto-detect-interface: true
+    dns-hijack: ['114.114.114.114:53', '180.76.76.76:53', '119.29.29.29:53', '223.5.5.5:53', '8.8.8.8:53', '8.8.4.4:53', '1.1.1.1:53', '1.0.0.1:53']
+mixin:
+    dns: { enable: true, enhanced-mode: fake-ip, listen: ':53', default-nameserver: [210.5.56.145], nameserver: [114.114.114.114], fallback: ['https://8.8.8.8/dns-query', 'https://1.0.0.1/dns-query', 'https://dns.twnic.tw/dns-query', 'https://doh.opendns.com/dns-query', 'https://dns-nyc.aaflalo.me/dns-query', 'https://dns.aa.net.uk/dns-query', 'https://sg.adhole.org/dns-query', 'https://kaitain.restena.lu/dns-query', 'https://hydra.plan9-ns1.com/dns-query', 'https://jp.tiar.app/dns-query', 'https://doh.asia.dnswarden.com/adblock'], fallback-filter: { geoip: true, geoip-code: CN } }
+clash-for-android:
+    append-system-dns: false
 
 # 机场
 proxy-providers:
