--- a/Done/XTT@MESL@CTC.yaml
+++ b/Done/XTT@MESL@CTC.yaml
@@ -24,7 +24,7 @@ clash-for-android:
 proxy-providers:
   🛫 守候网络:
     type: http
-    url: "https://sub.xttlove.uk/api/v1/client/subscribe?token=3c49d87dba5b906c143a8e63b0a8b18b&flag=clash"
+    url: "https://sub.xttlove.uk/api/v1/client/subscribe?token=3c49d87dba5b906c143a8e63b0a8b18b"
     interval: 172800
     path: ./守候网络.yaml
     health-check:
@@ -35,7 +35,7 @@ proxy-providers:
       
   🛫 MESL:
     type: http
-    url: "https://sb.meslcloud.com/api/v1/client/subscribe?token=2fa90227408233c58efae1ced10c9e41&flag=clash"
+    url: "https://sb.meslcloud.com/api/v1/client/subscribe?token=2fa90227408233c58efae1ced10c9e41"
     interval: 172800
     path: ./MESL.yaml
     health-check:
@@ -46,7 +46,7 @@ proxy-providers:
 
   🛫 CTC:
     type: http
-    url: "https://www.jinglongyu.com/api/v1/client/subscribe?token=25c29730bdfa76fc0edcd87439eaa101&flag=clash"
+    url: "https://www.jinglongyu.com/api/v1/client/subscribe?token=25c29730bdfa76fc0edcd87439eaa101"
     interval: 172800
     path: ./CTC.yaml
     health-check:
