--- a/RuleSet/机场Emby.yaml
+++ b/RuleSet/机场Emby.yaml
@@ -2,6 +2,6 @@ payload:
 #守候
 #ACA
   - DOMAIN-KEYWORD,misakaf
-  - DOMAIN-SUFFIX,emby.aca.best
-  - DOMAIN-SUFFIX,porn.aca.best
-  - DOMAIN-SUFFIX,emby.cn2gias.uk
+  - DOMAIN-SUFFIX,aca.best
+  - DOMAIN-SUFFIX,aca.best
+  - DOMAIN-SUFFIX,cn2gias.uk
