--- a/RuleSet/机场Emby.yaml
+++ b/RuleSet/机场Emby.yaml
@@ -2,5 +2,6 @@ payload:
 #守候
 #ACA
   - DOMAIN-SUFFIX,aca.best
+  - DOMAIN-SUFFIX,misakaf.org
   - DOMAIN-SUFFIX,cn2gias.uk
   - DOMAIN-SUFFIX,charontv.com
