--- a/RuleSet/游戏加速.yaml
+++ b/RuleSet/游戏加速.yaml
@@ -1,8 +1,7 @@
 payload:
 # 内容：魔兽大作战
   - DOMAIN-SUFFIX,braze.com
-  - DOMAIN-SUFFIX,api.blizzard.com
-  - DOMAIN-SUFFIX,gdp.blizzard.com
+  - DOMAIN-SUFFIX,blizzard.com
   - DOMAIN-SUFFIX,battle.net
   - DOMAIN-SUFFIX,appsflyer.com
   - DOMAIN-SUFFIX,backtrace.io
