--- a/XTT@MESL@CTC@ETON.conf
+++ b/XTT@MESL@CTC@ETON.conf
@@ -153,11 +153,11 @@ clash-for-android:
 
 # 游戏节点
 🇭🇰 香港游戏 = url-test,include-other-group=🛫 ETON,policy-regex-filter=^(((?i)(\b(hk)\b)).*((?i)(game|iplc|iepl|udpn))).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=10
-🇹🇼 台湾游戏 = url-test,include-other-group=🛫 ETON,policy-regex-filter=^(((?i)(\b(hk)\b)).*((?i)(game|iplc|iepl|udpn))).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=10
-🇸🇬 狮城游戏 = url-test,include-other-group=🛫 ETON,policy-regex-filter=^(((?i)(\b(hk)\b)).*((?i)(game|iplc|iepl|udpn))).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=10
-🇯🇵 日本游戏 = url-test,include-other-group=🛫 ETON,policy-regex-filter=^(((?i)(\b(hk)\b)).*((?i)(game|iplc|iepl|udpn))).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=10
-🇺🇲 美国游戏 = url-test,include-other-group=🛫 ETON,policy-regex-filter=^(((?i)(\b(hk)\b)).*((?i)(game|iplc|iepl|udpn))).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=10
-🇰🇷 韩国游戏 = url-test,include-other-group=🛫 ETON,policy-regex-filter=^(((?i)(\b(hk)\b)).*((?i)(game|iplc|iepl|udpn))).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=10
+🇹🇼 台湾游戏 = url-test,include-other-group=🛫 ETON,policy-regex-filter=^(((?i)(\b(tw)\b)).*((?i)(game|iplc|iepl|udpn))).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=10
+🇸🇬 狮城游戏 = url-test,include-other-group=🛫 ETON,policy-regex-filter=^(((?i)(\b(sg)\b)).*((?i)(game|iplc|iepl|udpn))).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=10
+🇯🇵 日本游戏 = url-test,include-other-group=🛫 ETON,policy-regex-filter=^(((?i)(\b(jp)\b)).*((?i)(game|iplc|iepl|udpn))).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=10
+🇺🇲 美国游戏 = url-test,include-other-group=🛫 ETON,policy-regex-filter=^(((?i)(\b(us)\b)).*((?i)(game|iplc|iepl|udpn))).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=10
+🇰🇷 韩国游戏 = url-test,include-other-group=🛫 ETON,policy-regex-filter=^(((?i)(\b(kr)\b)).*((?i)(game|iplc|iepl|udpn))).*$, url=http://www.gstatic.com/generate_204, interval=60, tolerance=10
 
 🌏 守候线路 = url-test,include-other-group=🛫 守候网络,policy-regex-filter=^((?i)(hk|tw|sg|jp).*(0.[1-9])).*$, url=http://www.gstatic.com/generate_204, interval=60
 
