--- a/XTT@MESL@CTC@ETON.conf
+++ b/XTT@MESL@CTC@ETON.conf
@@ -55,7 +55,7 @@ clash-for-android:
 
 🎮 Bahamut = select,🇹🇼 台湾低倍,🚀 低倍节点,🚀 手动切换
 
-🎮 游戏加速 = select,,🇭🇰 香港游戏,🇹🇼 台湾游戏,🇸🇬 狮城游戏,🇯🇵 日本游戏,🇺🇲 美国游戏,🇰🇷 韩国游戏,🚀 手动切换
+🎮 游戏加速 = select,🇭🇰 香港游戏,🇹🇼 台湾游戏,🇸🇬 狮城游戏,🇯🇵 日本游戏,🇺🇲 美国游戏,🇰🇷 韩国游戏,🚀 手动切换
 
 🎮 游戏下载 = select,🎯 全球直连,🇭🇰 香港低倍,🇹🇼 台湾低倍,🇸🇬 狮城低倍,🇯🇵 日本低倍,🇺🇲 美国低倍,🇰🇷 韩国低倍
 
