--- a/RuleSet/游戏加速.yaml
+++ b/RuleSet/游戏加速.yaml
@@ -2,6 +2,7 @@ payload:
 # 内容：魔兽大作战
   - DOMAIN-SUFFIX,braze.com
   - DOMAIN-SUFFIX,blizzard.com
+  - DOMAIN-SUFFIX,blizzard.arc
   - DOMAIN-SUFFIX,battle.net
   - DOMAIN-SUFFIX,appsflyer.com
   - DOMAIN-SUFFIX,backtrace.io
